--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+<!--- Main body --->
 <body>
+
+<header>
+    <h1>Contact FORECAST</h1>
+    <a href="index.php"><p>Home</p></a>
+</header>
+<main>
+    <p>Please contact FORECAST at ....</p>
+</main>
+<hr />
+<footer>
+    <div class="connect">
+        <p>FORECAST - FORESEE ORGANISE RESOURCE EFFICIENT COLLABORATE ACHIEVE SHARE TRANSFER </p>
+        <p>Connect with us:</p>
+        <p>Facebook</p>
+        <p>Twitter</p>
+        <p>LinkedIn</p>
+        <p>Instagram</p>
+        <p>You Tube</p>
+    </div>
+
+    <div class="bottom">
+        <p>&copy; 2019 Pauline Cairns</p>
+        <a href="contact.html"><p>Contact</p></a>
+        <a href="about.html"><p>About</p></a>
+        <a href="t&c.html"> <p>T&Cs</p></a>
+        <a href="cookies.html"><p>Cookies</p></a>
+    </div>
+</footer>
+
 
 </body>
 </html>
