--- a/about.html
+++ b/about.html
@@ -2,13 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1,
+    shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <title>About</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <!--- Main body --->
 <body>
-
+<div class="container">
 <header>
  <h1>About FORECAST</h1>
     <a href="index.php"><p>Home</p></a>
@@ -30,13 +35,19 @@
 
     <div class="bottom">
         <p>&copy; 2019 Pauline Cairns</p>
-        <a href="contact.html"><p>Contact</p></a>
-        <a href="about.html"><p>About</p></a>
-        <a href="t&c.html"> <p>T&Cs</p></a>
-        <a href="cookies.html"><p>Cookies</p></a>
+        <nav>
+            <ul>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="t&c.html">T&Cs</a></li>
+                <li><a href="cookies.html">Cookies</a></li>
+            </ul>
+        </nav>
     </div>
 </footer>
-
-
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
