Add contact us symbols to contact page

--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <title>Contact</title>
     <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 <!--- Main body --->
 <body>
@@ -19,19 +20,24 @@
 </header>
 <main>
     <p>Please contact FORECAST at ....</p>
+
+    <!-- GOOGLE MAP CODE START -->
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2166.0850872526707!2d-2.1429493483535826!3d57.11850899320855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x488410483d2f0941%3A0x5d8969688e77366a!2sRobert+Gordon+University!5e0!3m2!1sen!2suk!4v1552233747948" width="600" height="450" frameborder="0" style="border:0"
+            allowfullscreen></iframe>
+    <!--GOOGLE MAP CODE END -->
+
 </main>
 <hr />
 <footer>
     <div class="connect">
         <p>FORECAST - FORESEE ORGANISE RESOURCE EFFICIENT COLLABORATE ACHIEVE SHARE TRANSFER </p>
         <p>Connect with us:</p>
-        <p>Facebook</p>
-        <p>Twitter</p>
-        <p>LinkedIn</p>
-        <p>Instagram</p>
-        <p>You Tube</p>
-    </div>
 
+
+        <!-- Go to www.addthis.com/dashboard to customize your tools -->
+        <div class="addthis_inline_follow_toolbox"></div>
+    </div>
     <div class="bottom">
         <p>&copy; 2019 Pauline Cairns</p>
         <nav>
@@ -43,8 +49,18 @@
             </ul>
         </nav>
     </div>
+
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+
+
+
 </footer>
 </div>
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5c853fcb8b82e462"></script>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
