Add contact us symbols to index, t&cs, about & cookies pages

--- a/t&c.html
+++ b/t&c.html
@@ -25,12 +25,12 @@
 <footer>
     <div class="connect">
         <p>FORECAST - FORESEE ORGANISE RESOURCE EFFICIENT COLLABORATE ACHIEVE SHARE TRANSFER </p>
+
         <p>Connect with us:</p>
-        <p>Facebook</p>
-        <p>Twitter</p>
-        <p>LinkedIn</p>
-        <p>Instagram</p>
-        <p>You Tube</p>
+
+
+        <!-- Go to www.addthis.com/dashboard to customize your tools -->
+        <div class="addthis_inline_follow_toolbox"></div>
     </div>
 
     <div class="bottom">
@@ -46,6 +46,9 @@
     </div>
 </footer>
 </div>
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5c853fcb8b82e462"></script>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
