Add forecast logo to top of page and put in letter spacing

--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,9 @@
 <body>
 <div class="container">
 <header>
+    <a href="index.php"><h2 class="logo">FORECAST</h2></a>
     <h1>Contact FORECAST</h1>
-    <a href="index.php"><p>Home</p></a>
+
 </header>
 <main>
     <p>Please contact FORECAST at ....</p>
