--- a/cookies.html
+++ b/cookies.html
@@ -14,8 +14,9 @@
 <body>
 <div class="container">
 <header>
+    <a href="index.php"><h2 class="logo">FORECAST</h2></a>
     <h1>Cookies</h1>
-    <a href="index.php"><p>Home</p></a>
+
 </header>
 <main>
     <p>FORECAST has cookies ...</p>
