--- a/t&c.html
+++ b/t&c.html
@@ -15,8 +15,9 @@
 <body>
 <div class="container">
 <header>
+    <a href="index.php"><h2 class="logo">FORECAST</h2></a>
     <h1>Terms and conditions</h1>
-    <a href="index.php"><p>Home</p></a>
+
 </header>
 <main>
     <p>Please read our terms and conditions</p>
