--- a/private_form.html
+++ b/private_form.html
@@ -20,7 +20,7 @@
 
 <h3>Login form</h3>
 <br><br>
-<form method="post" action="full_list.php">
+<form method="post" action="input_private_task.php">
 
     <label>Task </label><br>
     <input type="text" name="task" placeholder="action required" autofocus required/><br><br>
