Set up input_department_task to post department task to DB

--- a/department_form.html
+++ b/department_form.html
@@ -20,7 +20,7 @@
 
 <h3>Set up task </h3>
 <br><br>
-<form method="post" action="full_list.php">
+<form method="post" action="input_department_task.php">
 
 
 
