--- a/module_form.html
+++ b/module_form.html
@@ -20,7 +20,7 @@
 
 <h3>Set up task </h3>
 <br><br>
-<form method="post" action="full_list.php">
+<form method="post" action="input_module_task.php">
 
 
     <label>Module </label><br>
