Linking pages from homepage through login to task page

--- a/private_form.html
+++ b/private_form.html
@@ -18,7 +18,7 @@
 <body>
 <h1>Input action</h1>
 
-<h3>Login form</h3>
+<h3>Set up task</h3>
 <br><br>
 <form method="post" action="input_private_task.php">
 
