--- a/create/module_form.html
+++ b/create/module_form.html
@@ -6,24 +6,27 @@
     shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>Input action</title>
+    <title>Module task</title>
 
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/colours.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/form.css">
+    <link rel="stylesheet" href="../assets/css/colours.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/form.css">
 
 </head>
 <body>
-<h1>Input action</h1>
+<h1>Module task required</h1>
 
-<h3>Set up task</h3>
+<h3>Set up task </h3>
 <br><br>
-<form method="post" action="input_private_task.php">
+<form method="post" action="input_module_task.php">
 
+
+    <label>Module </label><br>
+    <input type="text" name="module" placeholder="module number" autofocus required/><br><br>
     <label>Task </label><br>
-    <input type="text" name="task" placeholder="action required" autofocus required/><br><br>
+    <input type="text" name="task" placeholder="action required" required/><br><br>
     <label>Notes/Status </label><br>
     <textarea name="comments" placeholder="comments"></textarea><br><br>
     <label>Deadline </label><br>
