Updates to cover page

--- a/about.html
+++ b/about.html
@@ -16,13 +16,56 @@
 <div class="container">
 <header>
     <a href="index.php"><h2 class="logo">FORECAST</h2></a>
- <h1>About FORECAST</h1>
 
 
 
 </header>
 <main>
- <p>FORECAST was established ......</p>
+
+<h3>Purpose</h3>
+   <p> A task management resourcing tool to allocate work across tutors and support business continuity.</p>
+   <h3>Why Required?</h3>
+    <h4>Tutors</h4>
+    <p>Tutors lecture on a portfolio of modules and the workflow for each module differs across a semester often resulting in task deadlines across their portfolio clashing.
+    Currently each tutor keeps their to-do list either on a spreadsheet, a piece of paper, or in their heads.</p>
+    <h4>Head of school</h4>
+    <p>The head of school requires oversight of the workload across the school to aid
+        with allocation of work and understand future staffing requirements.</p>
+    <h4>Why Change?</h4>
+   <p>The adoption of a centralised task management system which stores tutor’s to-do lists:
+    1.	Provides real-time knowledge on the workload of tutors and the School to understand any current bottlenecks
+    2.	Allows prediction of future workloads to allow staffing requirements to be proactively assessed
+    3.	Provides business continuity as should a tutor be absent or leave RGU, the incumbent knows the current task status and pending deadlines.
+   </p>
+    <h4>How does <span class="forecast">FORECAST </span>help?</h4>
+    <p>FORECAST provides separate views for:</p>
+        <ul>
+    <li>
+        The Head of School – can view individual tutor or group of tutors to-do lists to understand current workload.
+    </li>
+    <li>
+        Each module - shows the tasks allocated to the module tutors along with a repository of uploaded files relevant to the module to encourage knowledge sharing.
+    </li>
+        <li>
+        Each tutor - shows their individual to-do list.
+        </li>
+    </ul>
+    <p>The tasks for a to-do list can be:</p>
+    <ul>
+        <li>
+    set up as new and allocated to a tutor,
+        </li>
+        <li>
+    amended,
+        </li>
+        <li>
+    reallocated to another tutor, and
+        </li>
+        <li>
+    removed from the list.
+        </li>
+    </ul>
+
 </main>
 <hr />
 <footer>
