--- a/t&c.html
+++ b/t&c.html
@@ -20,7 +20,8 @@
 
 </header>
 <main>
-    <p>Please read our terms and conditions</p>
+    <p>As this application is purely for use by RGU staff, for terms and conditions
+        please refer to the User Policy and Data Protection notices on <a href="http://campusmoodle.rgu.ac.uk/">Campus Moodle </a></p>
 </main>
 <hr />
 <footer>
