Update to css styling of about page

--- a/about.html
+++ b/about.html
@@ -13,89 +13,93 @@
 
 <!--- Main body --->
 <body>
-<div class="container">
-<header>
+
+  <div class="container colour">
+
+  <header>
     <a href="index.php"><h2 class="logo">FORECAST</h2></a>
+  </header>
 
+<!--Start of main section -->
+  <main>
 
-
-</header>
-<main>
-
-<h3>Purpose</h3>
-   <p> A task management resourcing tool to allocate work across tutors and support business continuity.</p>
-   <h3>Why Required?</h3>
-    <h4>Tutors</h4>
-    <p>Tutors lecture on a portfolio of modules and the workflow for each module differs across a semester often resulting in task deadlines across their portfolio clashing.
-    Currently each tutor keeps their to-do list either on a spreadsheet, a piece of paper, or in their heads.</p>
-    <h4>Head of school</h4>
-    <p>The head of school requires oversight of the workload across the school to aid
+    <h3>Purpose</h3>
+      <p> A task management resourcing tool to allocate work across tutors and support business continuity.</p>
+    <h3>Why required?</h3>
+      <h4>Tutors</h4>
+      <p>Tutors lecture on a portfolio of modules and the workflow for each module differs across a semester often resulting in task deadlines across their portfolio clashing.
+      Currently each tutor keeps their to-do list either on a spreadsheet, a piece of paper, or in their heads.</p>
+      <h4>Head of school</h4>
+      <p>The head of school requires oversight of the workload across the school to aid
         with allocation of work and understand future staffing requirements.</p>
-    <h4>Why Change?</h4>
-   <p>The adoption of a centralised task management system which stores tutor’s to-do lists:
-    1.	Provides real-time knowledge on the workload of tutors and the School to understand any current bottlenecks
-    2.	Allows prediction of future workloads to allow staffing requirements to be proactively assessed
-    3.	Provides business continuity as should a tutor be absent or leave RGU, the incumbent knows the current task status and pending deadlines.
-   </p>
-    <h4>How does <span class="forecast">FORECAST </span>help?</h4>
-    <p>FORECAST provides separate views for:</p>
-        <ul>
-    <li>
+    <h3>Why Change?</h3>
+      <p>The adoption of a centralised task management system which stores tutor’s to-do lists:</p>
+      <ul>
+          <li>Provides real-time knowledge on the workload of tutors and the School to understand any current bottlenecks</li>
+          <li>Allows prediction of future workloads to allow staffing requirements to be proactively assessed</li>
+          <li>Provides business continuity as should a tutor be absent or leave RGU, the incumbent knows the current task status and pending deadlines.</li>
+      </ul>
+    <h3>How does <span class="forecast">FORECAST </span>help?</h3>
+      <p>FORECAST provides separate views for:</p>
+      <ul>
+        <li>
         The Head of School – can view individual tutor or group of tutors to-do lists to understand current workload.
-    </li>
-    <li>
+        </li>
+        <li>
         Each module - shows the tasks allocated to the module tutors along with a repository of uploaded files relevant to the module to encourage knowledge sharing.
-    </li>
+        </li>
         <li>
         Each tutor - shows their individual to-do list.
         </li>
-    </ul>
-    <p>The tasks for a to-do list can be:</p>
-    <ul>
-        <li>
-    set up as new and allocated to a tutor,
-        </li>
-        <li>
-    amended,
-        </li>
-        <li>
-    reallocated to another tutor, and
-        </li>
-        <li>
-    removed from the list.
-        </li>
-    </ul>
+      </ul>
+      <p>The tasks for a to-do list can be:</p>
+      <ul>
+        <li>set up as new and allocated to a tutor,</li>
+        <li>amended,</li>
+        <li>reallocated to another tutor, and</li>
+        <li>removed from the list.</li>
+      </ul>
 
-</main>
-<hr />
-<footer>
-    <div class="connect">
-        <p>FORECAST - FORESEE ORGANISE RESOURCE EFFICIENT COLLABORATE ACHIEVE SHARE TRANSFER </p>
-        <p>Connect with us:</p>
+  </main>
+<!-- End of main section -->
 
+<!-- Start of footer -->
 
-        <!-- Go to www.addthis.com/dashboard to customize your tools -->
-        <div class="addthis_inline_follow_toolbox"></div>
-    </div>
+  <footer>
+     <hr />
+     <div class="row">
 
-    <div class="bottom">
-        <p>&copy; 2019 Pauline Cairns</p>
-        <nav>
-            <ul>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="t&c.html">T&Cs</a></li>
-                <li><a href="cookies.html">Cookies</a></li>
-            </ul>
-        </nav>
-    </div>
-</footer>
-</div>
-<!-- Go to www.addthis.com/dashboard to customize your tools -->
+       <div class="col-sm-8 forecast">FORECAST - FORESEE ORGANISE RESOURCE EXCHANGE COLLABORATE ACHIEVE SHARE TRANSFER </div>
+
+       <div class="col-sm-4">
+         <p>Connect with us: <span class="addthis_inline_follow_toolbox connect"></span></p>
+       </div>
+
+       </div>
+
+<!-- Bottom nav bar -->
+      <nav class="navbar navbar-expand-sm">
+        <span class="navbar-text">
+         &copy; 2019 Pauline Cairns
+        </span>
+          <ul class="navbar-nav">
+            <li class="nav-item"><a href="contact.html">Contact</a></li>
+            <li class="nav-item"><a href="about.html">About</a></li>
+            <li class="nav-item"><a href="t&c.html">T&Cs</a></li>
+            <li class="nav-item"><a href="cookies.html">Cookies</a></li>
+           </ul>
+       </nav>
+
+  </footer>
+<!-- End of footer -->
+
+<!-- End of <div class="container colour">-->
+  </div>
+
+  <!--  www.addthis.com/dashboard script for connect tools -->
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5c853fcb8b82e462"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <!-- Bootstrap script for general CSS layout-->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
