Update to css styling of t&c page

--- a/t&c.html
+++ b/t&c.html
@@ -13,46 +13,54 @@
 
 <!--- Main body --->
 <body>
-<div class="container">
-<header>
+  <div class="container colour">
+  <header>
     <a href="index.php"><h2 class="logo">FORECAST</h2></a>
-    <h1>Terms and conditions</h1>
+    <h3>Terms and conditions</h3>
 
-</header>
-<main>
+  </header>
+
+  <main>
     <p>As this application is purely for use by RGU staff, for terms and conditions
         please refer to the User Policy and Data Protection notices on <a href="http://campusmoodle.rgu.ac.uk/">Campus Moodle </a></p>
-</main>
-<hr />
-<footer>
-    <div class="connect">
-        <p>FORECAST - FORESEE ORGANISE RESOURCE EFFICIENT COLLABORATE ACHIEVE SHARE TRANSFER </p>
+  </main>
 
-        <p>Connect with us:</p>
+<!-- Start of footer -->
+   <footer>
+     <hr />
+     <div class="row">
 
+       <div class="col-sm-8 forecast">FORECAST - FORESEE ORGANISE RESOURCE EXCHANGE COLLABORATE ACHIEVE SHARE TRANSFER </div>
 
-        <!-- Go to www.addthis.com/dashboard to customize your tools -->
-        <div class="addthis_inline_follow_toolbox"></div>
-    </div>
+       <div class="col-sm-4">
+         <p>Connect with us: <span class="addthis_inline_follow_toolbox connect"></span></p>
+       </div>
 
-    <div class="bottom">
-    <p>&copy; 2019 Pauline Cairns</p>
-    <nav>
-        <ul>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="t&c.html">T&Cs</a></li>
-            <li><a href="cookies.html">Cookies</a></li>
-        </ul>
+     </div>
+
+    <!-- Bottom nav bar -->
+    <nav class="navbar navbar-expand-sm">
+      <span class="navbar-text">
+       &copy; 2019 Pauline Cairns
+      </span>
+      <ul class="navbar-nav">
+        <li class="nav-item"><a href="contact.html">Contact</a></li>
+        <li class="nav-item"><a href="about.html">About</a></li>
+        <li class="nav-item"><a href="t&c.html">T&Cs</a></li>
+        <li class="nav-item"><a href="cookies.html">Cookies</a></li>
+      </ul>
     </nav>
-    </div>
-</footer>
-</div>
-<!-- Go to www.addthis.com/dashboard to customize your tools -->
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5c853fcb8b82e462"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  </footer>
+<!-- End of footer -->
+
+<!-- End of <div class="container colour">-->
+  </div>
+
+<!--  www.addthis.com/dashboard script for connect tools -->
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5c853fcb8b82e462"></script>
+
+<!-- Bootstrap script for general CSS layout-->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
