--- a/contact.html
+++ b/contact.html
@@ -13,51 +13,60 @@
 </head>
 <!--- Main body --->
 <body>
-<div class="container">
-<header>
+  <div class="container colour">
+
+  <header>
     <a href="index.php"><h2 class="logo">FORECAST</h2></a>
-    <h1>Contact FORECAST</h1>
+    <h3>Contact <span class="forecast"> FORECAST</span></h3>
+  </header>
 
-</header>
-<main>
-    <p>Please contact FORECAST at ....</p>
+  <main>
 
+    <p>Please contact FORECAST at:</p>
     <!-- GOOGLE MAP CODE START -->
-
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2166.0850872526707!2d-2.1429493483535826!3d57.11850899320855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x488410483d2f0941%3A0x5d8969688e77366a!2sRobert+Gordon+University!5e0!3m2!1sen!2suk!4v1552233747948" width="600" height="450" frameborder="0" style="border:0"
             allowfullscreen></iframe>
     <!--GOOGLE MAP CODE END -->
+  </main>
 
-</main>
+<!-- Start of footer -->
 
-<footer>
-    <div class="connect">
-        <p>FORECAST - FORESEE ORGANISE RESOURCE EFFICIENT COLLABORATE ACHIEVE SHARE TRANSFER </p>
-        <p>Connect with us:</p>
+  <footer>
+    <hr />
+    <div class="row">
 
+      <div class="col-sm-8 forecast">FORECAST - FORESEE ORGANISE RESOURCE EXCHANGE COLLABORATE ACHIEVE SHARE TRANSFER </div>
 
-        <!-- Go to www.addthis.com/dashboard to customize your tools -->
-        <div class="addthis_inline_follow_toolbox"></div>
-    </div>
-    <div class="bottom">
-        <p>&copy; 2019 Pauline Cairns</p>
-        <nav>
-            <ul>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="t&c.html">T&Cs</a></li>
-                <li><a href="cookies.html">Cookies</a></li>
-            </ul>
-        </nav>
+      <div class="col-sm-4">
+        <p>Connect with us: <span class="addthis_inline_follow_toolbox connect"></span></p>
+      </div>
+
     </div>
 
- </footer>
-</div>
-<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<!-- Bottom nav bar -->
+    <nav class="navbar navbar-expand-sm">
+      <span class="navbar-text">
+       &copy; 2019 Pauline Cairns
+      </span>
+      <ul class="navbar-nav">
+        <li class="nav-item"><a href="contact.html">Contact</a></li>
+        <li class="nav-item"><a href="about.html">About</a></li>
+        <li class="nav-item"><a href="t&c.html">T&Cs</a></li>
+        <li class="nav-item"><a href="cookies.html">Cookies</a></li>
+      </ul>
+    </nav>
+
+  </footer>
+<!-- End of footer -->
+
+<!-- End of <div class="container colour">-->
+  </div>
+
+<!--  www.addthis.com/dashboard script for connect tools -->
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5c853fcb8b82e462"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<!-- Bootstrap script for general CSS layout-->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
 </body>
 </html>
