Insert images and teaches_module sql code

--- a/cookies.html
+++ b/cookies.html
@@ -12,7 +12,7 @@
 </head>
 <!--- Main body --->
 <body>
-<div class="container">
+<div class="container colour">
 <header>
     <a href="index.php"><h2 class="logo">FORECAST</h2></a>
     <h1>Cookies</h1>
