Updates to private table to identify user and include more sessions to identify the user.

--- a/create/module_form.html
+++ b/create/module_form.html
@@ -33,7 +33,7 @@
     <br>
 
     <label>Module</label><br>
-    <input type="text" name="module" placeholder="module id" autofocus required/><br><br>
+    <input type="text" name="code" placeholder="module id" autofocus required/><br><br>
     <label>Task </label><br>
     <input type="text" name="task" placeholder="action required" required/><br><br>
     <label>Notes/Status </label><br>
