Update to module-update forms and department forms

--- a/create/private_form.html
+++ b/create/private_form.html
@@ -34,7 +34,7 @@
     <label>Notes/Status </label><br>
     <textarea name="comments" placeholder="comments"></textarea><br><br>
     <label>Deadline </label><br>
-    <input type="date" name="deadline" placeholder="deadline" /><br><br>
+    <input type="date" name="deadline" placeholder="deadline" required/><br><br>
     <input type="submit" name="submit" value="Submit" />
 </form>
         </div>
