updates to formatting of code and putting in more code annotation

--- a/about.html
+++ b/about.html
@@ -1,3 +1,9 @@
+<!--
+Creator: Pauline Cairns
+Date: 11/03/2019
+Purpose: Page describes purpose of app. Link to this page will be found in each web page which contains a footer
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,7 +34,7 @@
     <h3>Why required?</h3>
       <h4>Tutors</h4>
       <p>Tutors lecture on a portfolio of modules and the workflow for each module differs across a semester often resulting in task deadlines across their portfolio clashing.
-      Currently each tutor keeps their to-do list either on a spreadsheet, a piece of paper, or in their heads.</p>
+      </p>
       <h4>Head of school</h4>
       <p>The head of school requires oversight of the workload across the school to aid
         with allocation of work and understand future staffing requirements.</p>
@@ -55,8 +61,7 @@
       <p>The tasks for a to-do list can be:</p>
       <ul>
         <li>set up as new and allocated to a tutor,</li>
-        <li>amended,</li>
-        <li>reallocated to another tutor, and</li>
+        <li>amended, and</li>
         <li>removed from the list.</li>
       </ul>
 
