--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,8 @@
-
+<!--
+Creator: Pauline Cairns
+Date: 01/04/2019
+Purpose: To reduce repetition of code within the app, page contains the footer code to be inserted within php web pages which contain a footer.
+-->
 <footer >
     <hr />
     <div class="row">
@@ -25,4 +29,3 @@
     </nav>
 
 </footer>
-<!-- End of footer -->
