--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,8 @@
+<!--
+Creator: Pauline Cairns
+Date: 11/03/2019
+Purpose: Page describes how to contact the app owner. Link to this page will be found in each web page which contains a footer
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
