--- a/cookies.html
+++ b/cookies.html
@@ -1,3 +1,8 @@
+<!--
+Creator: Pauline Cairns
+Date: 11/03/2019
+Purpose: Page describes the cookies/sessions which arise if use this app. Link to this page will be found in each web page which contains a footer
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,45 +17,54 @@
 </head>
 <!--- Main body --->
 <body>
-<div class="container colour">
-<header>
+  <div class="container colour">
+
+  <header>
     <a href="index.php"><h2 class="logo">FORECAST</h2></a>
-    <h1>Cookies</h1>
+    <h3>Cookies</h3>
+  </header>
 
-</header>
-<main>
-    <p>FORECAST has cookies ...</p>
-</main>
-<hr />
-<footer>
-    <div class="connect">
-        <p>FORECAST - FORESEE ORGANISE RESOURCE EFFICIENT COLLABORATE ACHIEVE SHARE TRANSFER </p>
-        <p>Connect with us:</p>
+  <main>
+    <p><span class="forecast"> FORECAST</span> uses session cookies to allow you , the user, once logged in, to remain logged into your account as you navigate through
+    the site thus allowing you to insert, update and retrieve information previously stored.</p>
+  </main>
 
+<!-- Start of footer -->
 
-        <!-- Go to www.addthis.com/dashboard to customize your tools -->
-        <div class="addthis_inline_follow_toolbox"></div>
-    </div>
+    <footer>
+        <hr />
+        <div class="row">
 
-    <div class="bottom">
-        <p>&copy; 2019 Pauline Cairns</p>
-        <nav>
-            <ul>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="t&c.html">T&Cs</a></li>
-                <li><a href="cookies.html">Cookies</a></li>
+            <div class="col-sm-8 forecast">FORECAST - FORESEE ORGANISE RESOURCE EXCHANGE COLLABORATE ACHIEVE SHARE TRANSFER </div>
+
+            <div class="col-sm-4">
+                <p>Connect with us: <span class="addthis_inline_follow_toolbox connect"></span></p>
+            </div>
+
+        </div>
+
+<!-- Bottom nav bar -->
+        <nav class="navbar navbar-expand-sm">
+      <span class="navbar-text">
+       &copy; 2019 Pauline Cairns
+      </span>
+            <ul class="navbar-nav">
+                <li class="nav-item"><a href="contact.html">Contact</a></li>
+                <li class="nav-item"><a href="about.html">About</a></li>
+                <li class="nav-item"><a href="t&c.html">T&Cs</a></li>
+                <li class="nav-item"><a href="cookies.html">Cookies</a></li>
             </ul>
         </nav>
-    </div>
-</footer>
 
-</div>
+    </footer>
+<!-- End of footer -->
+
+<!-- End of <div class="container colour">-->
+  </div>
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5c853fcb8b82e462"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<!-- Bootstrap script for general CSS layout-->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
 </body>
