--- a/t&c.html
+++ b/t&c.html
@@ -1,6 +1,12 @@
+<!--
+Creator: Pauline Cairns
+Date: 11/03/2019
+Purpose: Page describes the t&cs which arise if use this app. Link to this page will be found in each web page which contains a footer
+-->
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,
     shrink-to-fit=no">
@@ -9,11 +15,13 @@
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <title>T&Cs</title>
     <link rel="stylesheet" href="assets/css/style.css">
-</head>
+  </head>
 
 <!--- Main body --->
 <body>
+
   <div class="container colour">
+      
   <header>
     <a href="index.php"><h2 class="logo">FORECAST</h2></a>
     <h3>Terms and conditions</h3>
