putting in more code annotation

--- a/footer.html
+++ b/footer.html
@@ -3,7 +3,7 @@ Creator: Pauline Cairns
 Date: 01/04/2019
 Purpose: To reduce repetition of code within the app, page contains the footer code to be inserted within php web pages which contain a footer.
 -->
-<footer >
+<footer class="footer" >
     <hr />
     <div class="row">
 
