--- a/create/private_form.html
+++ b/create/private_form.html
@@ -1,3 +1,9 @@
+<!--
+Creator: Pauline Cairns
+Date: 11/03/2019
+Purpose: Input form for private related tasks
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,29 +22,29 @@
 
 </head>
 <body>
-<div class="container colour">
+  <div class="container colour">
+
     <header>
         <a href="../index.php"><h2 class="logo">FORECAST</h2></a>
     </header>
 
     <main>
         <div class=" d-flex justify-content-center">
+        <br>
+        <form method="post" action="input_private_task.php">
+            <h1 class="forecast">Private task</h1>
 
-
-<br>
-<form method="post" action="input_private_task.php">
-    <h1 class="forecast">Private task</h1>
-
-    <label>Task </label><br>
-    <input type="text" name="task" placeholder="action required" autofocus required/><br><br>
-    <label>Notes/Status </label><br>
-    <textarea name="comments" placeholder="comments"></textarea><br><br>
-    <label>Deadline </label><br>
-    <input type="date" name="deadline" placeholder="deadline" required/><br><br>
-    <input type="submit" name="submit" value="Submit" />
-</form>
+            <label>Task </label><br>
+            <input type="text" name="task" placeholder="action required" autofocus required/><br><br>
+            <label>Notes/Status </label><br>
+            <textarea name="comments" placeholder="comments"></textarea><br><br>
+            <label>Deadline </label><br>
+            <input type="date" name="deadline" placeholder="deadline" required/><br><br>
+            <input type="submit" name="submit" value="Submit" />
+        </form>
         </div>
     </main>
-</div>
+  </div>
+
 </body>
 </html>
