--- a/create/private_form.html
+++ b/create/private_form.html
@@ -39,7 +39,7 @@ Purpose: Input form for private related tasks
             <label>Notes/Status </label><br>
             <textarea name="comments" placeholder="comments"></textarea><br><br>
             <label>Deadline </label><br>
-            <input type="date" name="deadline" placeholder="deadline" required/><br><br>
+            <input type="date" name="deadline" placeholder="deadline" required/> * Required<br><br>
             <input type="submit" name="submit" value="Submit" />
         </form>
         </div>
