add back button to  forms

--- a/create/department_form.html
+++ b/create/department_form.html
@@ -25,7 +25,7 @@ Purpose: Input form for department related tasks
 
   <div class="container colour">
 
-    <header>
+<header>
         <a href="../index.php"><h2 class="logo">FORECAST</h2></a>
     </header>
 
@@ -41,8 +41,10 @@ Purpose: Input form for department related tasks
             <label>Deadline </label><br>
             <input type="date" name="deadline" placeholder="deadline" required/> * Required<br><br>
             <input type="submit" name="submit" value="Submit" />
+
         </form>
         </div>
+        <a href="../full_list.php"><p>Return to action list</p></a>
     </main>
 
   </div>
