--- a/create/private_form.html
+++ b/create/private_form.html
@@ -41,8 +41,10 @@ Purpose: Input form for private related tasks
             <label>Deadline </label><br>
             <input type="date" name="deadline" placeholder="deadline" required/> * Required<br><br>
             <input type="submit" name="submit" value="Submit" />
+
         </form>
         </div>
+        <a href="../full_list.php"><p>Return to action list</p></a>
     </main>
   </div>
 
