--- a/TODELETE/upload_file.html
+++ b/TODELETE/upload_file.html
@@ -7,7 +7,7 @@
 <body>
 
 
-<form action="../upload.php" method="post" enctype="multipart/form-data">
+<form action="../document_upload.php" method="post" enctype="multipart/form-data">
     Select image to upload:
     <input type="file" name="fileToUpload" id="fileToUpload">
     <input type="submit" value="Upload Image" name="submit">
