ability to download forms and add into to sql file to prefill some fields

--- a/create/module_form.html
+++ b/create/module_form.html
@@ -5,7 +5,7 @@ Purpose: Input form for module related tasks
 -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,
@@ -39,7 +39,7 @@ Purpose: Input form for module related tasks
             <label>Module  </label><br>
             <input type="text" name="code" placeholder="module id" autofocus required/><br><br>
             <label>Task </label><br>
-            <input type="text" name="task" placeholder="action required" required/><br><br>
+            <textarea name="task" placeholder="action required" required></textarea><br><br>
             <label>Notes/Status </label><br>
             <textarea name="comments" placeholder="comments"></textarea><br><br>
             <label>Deadline         </label><br>
