--- a/create/department_form.html
+++ b/create/department_form.html
@@ -35,7 +35,7 @@ Purpose: Input form for department related tasks
         <form method="post" action="input_department_task.php">
             <h1 class="forecast">Department task </h1>
             <label>Task </label><br>
-            <input type="text" name="task" placeholder="action required" autofocus required/><br><br>
+            <textarea name="task" placeholder="action required" autofocus required></textarea><br><br>
             <label>Notes/Status </label><br>
             <textarea name="comments" placeholder="comments"></textarea><br><br>
             <label>Deadline </label><br>
